name:                big-oh
version:             0.1.0.0
synopsis:            Complexity testing for Haskell.
description:         A Haskell library for testing time and space complexity.
license:             BSD3
license-file:        LICENSE
author:              Tran Ma
maintainer:          tran@defma.in
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Test.BigOh
                     , Test.BigOh.Benchmark
                     , Test.BigOh.Generate
                     , Test.BigOh.Plot

  build-depends:       base >= 4.8 && < 5
                     , hakaru >= 0.3
                     , criterion >= 1.0
                     , statistics >= 0.13 && < 0.14
                     , ansigraph >= 0.1
                     , QuickCheck >= 2.8
                     , transformers
                     , array
                     , deepseq

  hs-source-dirs:      src
  default-language:    Haskell2010
