name:                big-oh
version:             0.1.0.0
synopsis:            Complexity testing for Haskell.
description:         A Haskell library for testing time and space complexity.
license:             BSD3
license-file:        LICENSE
author:              Tran Ma
maintainer:          tran@defma.in
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Test.BigOh
                     , Test.BigOh.Benchmark
                     , Test.BigOh.Generate
                     , Test.BigOh.Plot
                     , Test.BigOh.Fit.Hakaru
                     , Test.BigOh.Fit.R
                     , Test.BigOh.Fit.Naive
                     , Test.BigOh.Fit.Base

  build-depends:       base >= 4.8 && < 5
                     , hakaru == 0.1.4
                     , inline-r
                     , criterion
                     , statistics
                     , ansigraph >= 0.1
                     , QuickCheck >= 2.8
                     , transformers
                     , array
                     , deepseq
                     , vector
                     , discrimination >= 0.1
                     , ansi-terminal >= 0.6

  hs-source-dirs:      src
  default-language:    Haskell2010
